# coords

./: .gitignore  .gitmodules  .hgignore  CMakeLists.txt  Makefile  README.md  README.txt  avltree.h  chunkedFile.cc  config.h  conv_osm.cc  conv_osmxml.cc  coordsCreateStorage.1.ronn  coordsResolveLocations.1.ronn  data_converter.cc  deadcode.cc  dump_kv.c  extractor_magdeburg.cc  fileformat.proto  filter_kv_histogram.py  filter_osm.cc  fraction.h  gen_coverage_report.sh  generate_symbolic_tags.py  geo_unit_tests.cc  geometric_types.cc  geometric_types.h  gl_test.c  gl_test.cc  helpers.cc  helpers.h  index.html  int128.cc  int128.h  int128ng.cc  int128ng.h  key_freq.py  makePdf.py  make_index.cc  math64.asm  (+54 more)
debian/: changelog  control  copyright  rules
man/: coordsCreateTiles.1.ronn  coordsResolveStorage.1.ronn
proto/: fileformat.proto  osmformat.proto
src/: config.h  conv_osm.cc  escapeSequences.h  geomReader.cc  mem_map.cc  multipolygonReconstructor.cc  resolveRefs.cc  tiler.cc  tiles.cc  tiles.h  unmapId.cc  wayIntegrator.cc
src/consumers/: osmConsumer.cc  osmConsumer.h  osmConsumerCounter.cc  osmConsumerCounter.h  osmConsumerDumper.cc  osmConsumerDumper.h  osmConsumerIdRemapper.cc  osmConsumerIdRemapper.h
src/containers/: bucketFileSet.h  chunkedFile.cc  chunkedFile.h  osmNodeStore.cc  osmNodeStore.h  osmRelationStore.cc  osmRelationStore.h  osmWayStore.cc  osmWayStore.h  persistentVector.h  radixTree.h  reverseIndex.cc  reverseIndex.h  serializableMap.h
src/geom/: envelope.cc  envelope.h  genericGeometry.cc  genericGeometry.h  geomSerializers.cc  geomSerializers.h  multipolygonReconstructor.cc  multipolygonReconstructor.h  ring.cc  ring.h  ringAssembler.cc  ringAssembler.h  ringSegment.cc  ringSegment.h  simplify.cc  simplify.h  srsConversion.cc  srsConversion.h
src/lod/: addressLodHandler.cc  addressLodHandler.h  boundaryLodHandler.cc  boundaryLodHandler.h  buildingPolygonLodHandler.cc  buildingPolygonLodHandler.h  landuseOverlayPolygonLodHandler.cc  landuseOverlayPolygonLodHandler.h  landusePolygonLodHandler.cc  landusePolygonLodHandler.h  lodHandler.cc  lodHandler.h  placeLodHandler.cc  placeLodHandler.h  polygonLodHandler.cc  polygonLodHandler.h  roadLabelLodHandler.cc  roadLabelLodHandler.h  roadLodHandler.cc  roadLodHandler.h  roadMinorLabelLodHandler.cc  roadMinorLabelLodHandler.h  waterPolygonLodHandler.cc  waterPolygonLodHandler.h  waterwayLodHandler.cc  waterwayLodHandler.h
src/misc/: cleanup.cc  cleanup.h  escapeSequences.h  mem_map.h  rawTags.cc  rawTags.h  symbolicNames.cc  symbolicNames.h  varInt.cc  varInt.h
src/osm/: osmBaseTypes.cc  osmBaseTypes.h  osmMappedTypes.cc  osmMappedTypes.h  osmParserPbf.cc  osmParserPbf.h  osmParserXml.cc  osmParserXml.h  osmTypes.cc  osmTypes.h  osm_tags.cc  parseOsmChange.cc
stylesheets/: stylesheet.css
tests/: arithmetic_test.cc  geometry_test.cc  quadtree_test.cc  triangulation.cc  triangulation.h  triangulation_test.cc
tools/: chunkHist.cc  chunking.py  generate_histograms.sh  getRawNodes.cc  make_index.cc  nodeHistogram.cc  stringHistogram.cc  symNames.py
